# TerminalImageViewer

./: .gitignore  CMakeLists.txt  Makefile.am  autogen.sh  configure.ac
src/main/cpp/: CImg.h  Makefile  tiv.cpp
